Fix spacing of navbar icons

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -9,7 +9,7 @@
 
 @layer utilities
     .link
-        @apply text-blue-600 hover:text-blue-500 dark:text-blue-500 dark:hover:text-blue-400 motion-safe:transition-colors motion-safe:duration-150
+        @apply text-blue-600 hover:text-blue-500 dark:text-blue-500 dark:hover:text-blue-400 motion-safe:transition-colors
 
 @layer components
     .box
